--- a/gallery/style.css
+++ b/gallery/style.css
@@ -20,7 +20,7 @@ body {
 	border-bottom: solid 1px grey; 
 }
 
-ul.tabs {
+ul#tabs {
 	list-style-type: none; 
 	max-width: 660px; /* for  below IE7 use `width: 660px;` */
     margin: 0 auto;
@@ -28,11 +28,11 @@ ul.tabs {
 
 }
 
-ul.tabs li {
+ul#tabs li {
 	display: inline;
 }
 
-ul.tabs li a {
+ul#tabs li a {
 	color: #42454a; 
 	background-color: #dedbde; 
 	border: 1px solid #c9c3ba;
@@ -45,11 +45,11 @@ ul.tabs li a {
 
 }
 
-ul.tabs li a:hover {
+ul#tabs li a:hover {
 	background-color: #f1f0ee;
 }
 
-ul.tabs a.selected {
+ul#tabs a.selected {
 	color: #000; 
 	background-color: #f1f0ee; 
 	font-weight: bold; 
