--- a/gallery/style.css
+++ b/gallery/style.css
@@ -17,7 +17,7 @@ body {
 	color: blue;
 	font-size: 5em;
 	padding: 2% 0% 3% 0%;
-	border-bottom: solid 1px grey; 
+	border-bottom: solid 1px gray; 
 }
 
 ul.subTabs {
